[gd_scene load_steps=7 format=3 uid="uid://c2i4jspd3pywh"]

[ext_resource type="Script" path="res://UI/Scripts/GameUI.gd" id="1_m1i8e"]
[ext_resource type="Script" path="res://UI/Scripts/ask.gd" id="2_hylm8"]
[ext_resource type="Texture2D" uid="uid://dj3rjks6wd3ls" path="res://Assets/Small_Round_btn.png" id="3_hncth"]
[ext_resource type="Texture2D" uid="uid://bkcrw2l11s3j6" path="res://Assets/Small_Round_btn_pressed.png" id="4_dxt15"]
[ext_resource type="FontFile" uid="uid://c1dw4wvypo661" path="res://Assets/AgentOrange.ttf" id="5_eb7vn"]
[ext_resource type="Texture2D" uid="uid://bgvxfj8j7ejdf" path="res://Assets/btn.png" id="6_mmlwd"]

[node name="QuestionUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_m1i8e")

[node name="Ask" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m1i8e")

[node name="Topic" type="ItemList" parent="Ask"]
layout_mode = 0
offset_left = 34.0
offset_top = 61.0
offset_right = 267.0
offset_bottom = 206.0
item_count = 5
item_0/text = "Gender"
item_1/text = "Hair Color"
item_2/text = "Eye Color"
item_3/text = "Accessories"
item_4/text = "Facial Hair"
script = ExtResource("2_hylm8")

[node name="Filter" type="ItemList" parent="Ask/Topic"]
top_level = true
layout_mode = 0
offset_left = 287.0
offset_top = 61.0
offset_right = 523.0
offset_bottom = 206.0
script = ExtResource("2_hylm8")

[node name="Ask_btn" type="TextureButton" parent="Ask"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 306.0
offset_right = 264.0
offset_bottom = 434.0
grow_vertical = 2
disabled = true
action_mode = 0
texture_normal = ExtResource("3_hncth")
texture_pressed = ExtResource("3_hncth")
texture_hover = ExtResource("4_dxt15")
script = ExtResource("1_m1i8e")

[node name="btn" type="Label" parent="Ask/Ask_btn"]
layout_mode = 0
offset_left = 27.0
offset_top = 24.0
offset_right = 222.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0.831373, 0.0901961, 0.262745, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.831373, 0.0901961, 0.262745, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("5_eb7vn")
theme_override_font_sizes/font_size = 50
text = "Ask
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Question" type="Label" parent="Ask"]
layout_mode = 0
offset_left = 46.0
offset_top = 229.0
offset_right = 466.0
offset_bottom = 296.0
theme_override_colors/font_color = Color(0.831373, 0.0901961, 0.262745, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.831373, 0.0901961, 0.262745, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 50
theme_override_fonts/font = ExtResource("5_eb7vn")
theme_override_font_sizes/font_size = 24
text = "Is your Character ..."
vertical_alignment = 1
script = ExtResource("1_m1i8e")

[node name="Btn" type="Sprite2D" parent="Ask/Question"]
visible = false
show_behind_parent = true
position = Vector2(318, 37)
scale = Vector2(1.38281, 0.640625)
texture = ExtResource("6_mmlwd")

[node name="toggle" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 1153.0
grow_vertical = 0
script = ExtResource("1_m1i8e")

[node name="Question_btn" type="TextureButton" parent="toggle"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 256.0
grow_vertical = 0
texture_normal = ExtResource("3_hncth")
texture_pressed = ExtResource("3_hncth")
texture_hover = ExtResource("4_dxt15")
script = ExtResource("1_m1i8e")

[node name="Label" type="Label" parent="toggle/Question_btn"]
layout_mode = 0
offset_left = 41.0
offset_top = 36.0
offset_right = 216.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 24
theme_override_fonts/font = ExtResource("5_eb7vn")
theme_override_font_sizes/font_size = 25
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_selected" from="Ask/Topic" to="Ask/Topic" method="_on_item_selected"]
[connection signal="item_selected" from="Ask/Topic/Filter" to="Ask/Topic" method="_on_filter_item_selected"]
[connection signal="button_down" from="Ask/Ask_btn" to="." method="_on_ask_btn_button_down"]
[connection signal="button_up" from="Ask/Ask_btn" to="." method="_on_ask_btn_button_up"]
[connection signal="pressed" from="toggle/Question_btn" to="." method="_on_question_btn_pressed"]
